# miwireframe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.py  requirements.txt  setup.py
src/: core.cpp  main.cpp
src/miwireframe/: __init__.py
